--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,54 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Blog</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>Tumblr</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= favicon_link_tag 'favicon.ico' %>
+  <%= csrf_meta_tags %>
+</head>
+<body>
+	<div id="sidebar">
+		<ul>
+			<li class="category"><%= link_to "Tumblr", root_path %></li>
+			<li><%= link_to "Posts", root_path %></li>
+			<li>About</li>
+		</ul>
+		
+	
+		
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+	</div>
 
-  <body>
-    <%= yield %>
-  </body>
+	<div id="main_content">
+		<div id="header">
+			<% if current_page?(root_path) %>
+				<p>Post Feed</p>
+			<% elsif current_page?(about_path) %>
+				<p>My Site</p>
+			<% else %>
+				<%= link_to "Back to Post Feed", root_path %>
+			<% end %>
+			
+			<div class="buttons">
+				<button class="button"><%= link_to "Make Post", new_post_path %></button>
+				
+			</div>
+			
+
+
+		</div>	
+		
+		<% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert") %>
+		<% end %>
+
+		<%= yield %>
+
+	</div>
+
+
+
+</body>
 </html>
